# auth-example

auth/: Cargo.toml  Dockerfile  docker-compose.yml
auth/.deploy/: deployment.yaml  ingressroutes.yaml  kustomization.yaml  service.yaml
auth/src/: main.rs  storage.rs
client/: Dockerfile  nginx.conf  package.json
client/.deploy/: deployment.yaml  ingressroutes.yaml  service.yaml
client/src/: App.css  App.js  Home.js  index.js  setupProxy.js  state.js  withAuth.js
shipments/: Cargo.toml  Dockerfile
shipments/.deploy/: deployment.yaml  ingressroutes.yaml  kustomization.yaml  middleware.yaml  service.yaml
shipments/src/: main.rs
