[package]
name = "auth-example"
version = "0.1.0"
authors = ["Jan-Gerrit Harms <jan.gerrit.harms@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
serde_json = "1"
uuid = { version = "0.8",  features = ["serde", "v4"] }
jsonwebtoken = "7.2.0"
chrono = "0.4.19"
actix-web-httpauth = "0.5.0"
actix-rt = "2.1"
env_logger = "0.8"
actix-session = "0.4.1"
actix-redis = "0.9.2"
rand = "0.8.3"
log = "0.4.14"
clap = "2.33.3"
mongodb = "2.0.0-alpha.1"
